--- a/tonyClass/src/index.html
+++ b/tonyClass/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ReinaldoClass</title>
+    <title>TonyClass</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -22,9 +22,6 @@
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
       crossorigin="anonymous"
     ></script>
-    <!-- CDN to PDF https://pt.stackoverflow.com/questions/47452/exibir-arquivo-pdf-no-corpo-da-p%C3%A1gina-html -->
-    <!-- <script src="
-https://cdn.jsdelivr.net/npm/pdfjs-dist@3.11.174/build/pdf.min.js
-"></script> -->
+  
   </body>
 </html>
